--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,8 @@
 pipeline{
     agent{
         docker{
-            image 'lakshayaswal/maven_java17:v1'
+            image 'maven:3.9.6-eclipse-temurin-17
+'
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
         }
     }
