--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,7 @@
 pipeline{
     agent{
         docker{
-            image 'maven:3.9.6-eclipse-temurin-17
-'
+            image 'maven:3.9.6-eclipse-temurin-17'
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
         }
     }
@@ -22,7 +21,7 @@ pipeline{
         }
         stage('Static Code Analysis'){
             environment{
-                SONAR_URL = 'http://127.0.0.1:9000'
+                SONAR_URL = 'http://98.130.44.188:9000'
             }
             steps{
                 withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]){
