--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -9,7 +9,7 @@ pipeline{
         stage('Checkout'){
             steps{
                 sh 'echo passed'
-                git branch: 'main', url: 'https://github.com/iam-veeramalla/Ulitimate_CICD_Pipeline_Project.git'
+                //git branch: 'main', url: 'https://github.com/iam-veeramalla/Ulitimate_CICD_Pipeline_Project.git'
             }
         }
         stage('Build & Test'){
@@ -48,7 +48,7 @@ pipeline{
         }
         stage('Update Deployment File'){
             environment{
-                GIT_REPO_NAME = 'Jenkins-Zero-To-Hero'
+                GIT_REPO_NAME = 'Ulitimate_CICD_Pipeline_Project'
                 GIT_USER_NAME = 'Lakshay-Aswal'
             }
             steps{
@@ -58,7 +58,7 @@ pipeline{
                         git config user.name "Lakshay-Aswal"
                         BUILD_NUMBER=${BUILD_NUMBER}
                         sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.ymll
+                        git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                         git commit -m "Update deployment image tag to ${BUILD_NUMBER}"
                         git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                     '''
