--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -9,7 +9,7 @@ pipeline{
         stage('Checkout'){
             steps{
                 sh 'echo passed'
-                //git branch: 'main', url: 'https://github.com/iam-veeramalla/Ulitimate_CICD_Pipeline_Project.git'
+                git branch: 'main', url: 'https://github.com/iam-veeramalla/Ulitimate_CICD_Pipeline_Project.git'
             }
         }
         stage('Build & Test'){
