--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,7 +8,7 @@ pipeline{
     stages{
         stage('Checkout'){
             steps{
-                sh 'echo passed'
+                checkout scm
                 //git branch: 'main', url: 'https://github.com/iam-veeramalla/Ulitimate_CICD_Pipeline_Project.git'
             }
         }
