--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,6 +53,8 @@ pipeline{
             }
             steps{
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                  script{
+                    checkout scm
                     sh '''
                         git config user.email "aswallakshay02@gmail.com"
                         git config user.name "Lakshay-Aswal"
@@ -62,6 +64,7 @@ pipeline{
                         git commit -m "Update deployment image tag to ${BUILD_NUMBER}"
                         git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                     '''
+                   }
                 }
             }
         }
