--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,9 +53,8 @@ pipeline{
             }
             steps{
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                  script{
-                    checkout scm
                     sh '''
+                        cd $WORKSPACE
                         git config user.email "aswallakshay02@gmail.com"
                         git config user.name "Lakshay-Aswal"
                         BUILD_NUMBER=${BUILD_NUMBER}
@@ -64,7 +63,7 @@ pipeline{
                         git commit -m "Update deployment image tag to ${BUILD_NUMBER}"
                         git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                     '''
-                   }
+                   
                 }
             }
         }
