--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,13 +2,15 @@ pipeline{
     agent {
     docker {
         image 'lakshayaswal/maven-java17-docker:v1'
-        args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE -w $WORKSPACE'
+        args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+        //args '--user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE -w $WORKSPACE'
     }
 }
     stages{
         stage('Checkout'){
             steps{
-                checkout scm
+                sh 'echo passed'
+                //checkout scm
                 //git branch: 'main', url: 'https://github.com/Lakshay-Aswal/Ulitimate_CICD_Pipeline_Project.git'
             }
         }
@@ -54,7 +56,6 @@ pipeline{
             steps{
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
-                        cd $WORKSPACE
                         git config user.email "aswallakshay02@gmail.com"
                         git config user.name "Lakshay-Aswal"
                         BUILD_NUMBER=${BUILD_NUMBER}
