checkout scm // Add this line to ensure .git is present

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -54,9 +54,9 @@ pipeline{
                 GIT_USER_NAME = 'Lakshay-Aswal'
             }
             steps{
+                checkout scm // Add this line to ensure .git is present
                 withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                     sh '''
-                        cd $WORKSPACE
                         git config user.email "aswallakshay02@gmail.com"
                         git config user.name "Lakshay-Aswal"
                         BUILD_NUMBER=${BUILD_NUMBER}
